--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -4,7 +4,7 @@
   font-family: 'Open Sans', sans-serif;
   src: url(../fonts/OpenSans-Regular.ttf) format('ttf');
   font-style: normal;
-  font-weight: 400;
+  font-weight: normal;
 }
 
 /* Metal Mania - Regular 400 */
