--- a/src/sass/normalize.scss
+++ b/src/sass/normalize.scss
@@ -30,6 +30,37 @@ ul {
   list-style: none;
 }
 
+h1 {
+  font-size: 30px;
+  line-height: 34px;
+  font-weight: normal;
+}
+
+@media(min-width:768px) {
+  h1 {
+    font-size: 40px;
+    line-height: 44px;
+  }
+}
+
+@media(min-width:1024px) {
+  h1 {
+    font-size: 50px;
+    line-height: 54px;
+  }
+}
+
+h2 {
+  font-size: 24px;
+  line-height: 29px;
+  font-weight: normal;
+}
+
+p {
+  font-size: 16px;
+  line-height: 24px;
+  font-weight: normal;
+}
 
 .container {
   max-width: 1024px;
