--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -6,3 +6,6 @@
 @import '../components/Header/BackDrop/BackDrop.scss';
 @import '../components/Header/SideDrawer/DrawerToggleButton.scss';
 @import '../components/Header/SideDrawer/SideDrawer.scss';
+// @import '../components/Main/Section_About_Me/AboutMe.scss';
+@import '../components/shared/Button.scss';
+@import '../components/Main/Section_Relationships_and_Requirements/Relationship.scss'
