--- a/src/components/Main/Section_Users/Users.scss
+++ b/src/components/Main/Section_Users/Users.scss
@@ -1,10 +1,40 @@
-.imageDiv {
+.users-section {
+  &__container {
+    padding: 50px 30px;
+    outline: 1px solid red;
+    background-color: $background-color-2;
+  }
 
-  width: 15px;
-  height: 15px;
+  &__list {
+    display: flex;
+    flex-wrap: wrap;
+  }
 
+  &__profile-card {
+    outline: 1px solid green;
+    width: 103600%;
+    margin-bottom: 10px;
 
-  &::before {
-    content: attr(imageData)
+    @media (min-width: 768px) {
+      width: 30%;
+    }
+  }
+
+  &__user-container {
+    display: flex;
+    flex-direction: column;
+    outline: 1px solid orange;
+    height: 100%;
+    max-width: 200px;
+  }
+
+  &__user-image {
+    height: 75px;
+    width: 75px;
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    margin-bottom: 20px;
+    border-radius: 50%;
   }
 }
