--- a/src/components/shared/Button.scss
+++ b/src/components/shared/Button.scss
@@ -19,4 +19,8 @@
     box-shadow: 0px 2px 1px 1px rgba(0, 0, 0, 0.15);
     background-color: #D24335;
   }
+
+  &:disabled {
+    background-color: grey;
+  }
 }
