--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -10,3 +10,4 @@
 @import '../components/shared/Button.scss';
 @import '../components/Main/Section_Relationships_and_Requirements/Relationship.scss';
 @import '../components/Main/Section_Users/Users.scss';
+@import '../components/shared/Modal.scss';
