--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -11,3 +11,4 @@
 @import '../components/Main/Section_Relationships_and_Requirements/Relationship.scss';
 @import '../components/Main/Section_Users/Users.scss';
 @import '../components/shared/Modal.scss';
+@import '../components/Footer/Footer.scss';
