--- a/src/components/Main/Section_Users/Users.scss
+++ b/src/components/Main/Section_Users/Users.scss
@@ -1,22 +1,60 @@
 .users-section {
+  padding-bottom: 235px;
+  outline: 1px solid orange;
+
   &__container {
-    padding: 50px 30px;
+    padding: 75px 30px;
     outline: 1px solid red;
     background-color: $background-color-2;
+    display: flex;
+    flex-wrap: wrap;
+
+    @media (min-width: 768px) {
+      padding: 75px 16px;
+
+    }
+
+  }
+
+  &__header {
+    text-align: center;
+    padding-bottom: 76px;
+
+    h1 {
+      padding-bottom: 15px;
+    }
+
+
   }
 
   &__list {
     display: flex;
     flex-wrap: wrap;
+    width: 100%;
+    padding: 0;
+    margin: 0;
+    justify-content: space-around;
+
+
   }
 
   &__profile-card {
     outline: 1px solid green;
-    width: 103600%;
-    margin-bottom: 10px;
+    padding-bottom: 60px;
+
 
     @media (min-width: 768px) {
       width: 30%;
+
+      h2 {
+        font-size: 24px;
+        margin-bottom: 10px;
+      }
+
+      p {
+        font-size: 16px;
+        color: #4c4b4b;
+      }
     }
   }
 
@@ -25,16 +63,18 @@
     flex-direction: column;
     outline: 1px solid orange;
     height: 100%;
-    max-width: 200px;
+    max-width: 210px;
+
   }
 
   &__user-image {
-    height: 75px;
-    width: 75px;
+    height: 71px;
+    width: 71px;
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    margin-bottom: 20px;
+    margin-bottom: 15px;
     border-radius: 50%;
   }
+
 }
