--- a/src/components/Header/Toolbar/Toolbar.scss
+++ b/src/components/Header/Toolbar/Toolbar.scss
@@ -2,29 +2,25 @@
   position: fixed;
   width: 100%;
   background: #ffffff;
-  height: 56px;
+  height: 60px;
   top: 0;
 
   &__navigation {
     display: flex;
     align-items: center;
+    align-content: center;
     height: 100%;
   }
 
-  &__logo {
 
-
-    a {
-      color: white;
-      text-decoration: none;
-      font-size: $baseFontSize;
-    }
-  }
 
   &__navigation-items {
 
     li {
       padding: 1rem;
+      padding-top: 1.4rem;
+      padding-right: 12.2px;
+      padding-bottom: 21px;
     }
 
     ul {
@@ -47,6 +43,9 @@
     a {
       color: $text-color;
       text-decoration: none;
+      font-size: 14px;
+      line-height: 60px;
+      font-weight: 400;
 
       &:hover {
         color: $primary-color;
