--- a/src/components/Main/Section_About_Me/AboutMe.scss
+++ b/src/components/Main/Section_About_Me/AboutMe.scss
@@ -10,19 +10,30 @@
 
   &__container {
     box-sizing: border-box;
-    max-width: 560px;
-    height: 70%;
+    max-width: 520px;
+    height: 68%;
     margin: 0 0 0 30px;
     display: flex;
     flex-direction: column;
     justify-content: space-around;
     align-items: flex-start;
     color: #ffffff;
-    padding-right: 30px;
+    text-align: justify;
+
+    h1 {
+      text-align: left;
+    }
+
+    p {
+      padding-top: 5px;
+      padding-bottom: 12px;
+    }
+
   }
 
   &__button {
     margin: 0;
+    margin-bottom: 9px;
   }
 
   .mobile {
