--- a/src/components/Main/Section_Relationships_and_Requirements/Relationship.scss
+++ b/src/components/Main/Section_Relationships_and_Requirements/Relationship.scss
@@ -9,7 +9,7 @@
   &__container {
     height: 100%;
     width: 100%;
-    padding: 100px 30px;
+    padding: 152px 30px;
     outline: 1px solid blue;
     display: flex;
     flex-wrap: wrap;
@@ -39,13 +39,14 @@
   &__text-container {
     outline: 1px solid green;
     height: 72%;
-    width: 47.5%;
+    width: 56.5%;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
 
     align-content: flex-start;
-    padding-bottom: 100px;
+    padding-bottom: 55px;
+    text-align: justify;
 
     @media (max-width:767px) {
       width: 100%;
@@ -58,13 +59,14 @@
 
     @media (min-width:768px) {
 
-      padding-top: 50px;
+
       ;
 
     }
 
     h2 {
       margin-left: 0;
+      line-height: 19px;
       ;
     }
 
@@ -98,8 +100,11 @@
   }
 
   &__svg {
-    width: 47.5%;
-    height: 50%;
+    outline: 1px solid red;
+    width: 39.5%;
+    height: 58.5%;
+    margin-bottom: 65px;
+    ;
 
     @media (max-width:767px) {
       width: 100%;
