--- a/src/sass/normalize.scss
+++ b/src/sass/normalize.scss
@@ -11,8 +11,8 @@ html {
 body {
   margin: 0;
   padding: 0;
-  font-family: 'Open Sans', sans-serif;
   height: 100%;
+  font-family: 'Open Sans', sans-serif;
 }
 
 
@@ -47,6 +47,7 @@ h1 {
   h1 {
     font-size: 50px;
     line-height: 54px;
+    font-weight: 400;
   }
 }
 
