--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -12,3 +12,4 @@
 @import '../components/Main/Section_Users/Users.scss';
 @import '../components/shared/Modal.scss';
 @import '../components/Footer/Footer.scss';
+@import '../components/Main/Section_Register/Register.scss';
