--- a/src/sass/fonts.scss
+++ b/src/sass/fonts.scss
@@ -6,3 +6,12 @@
   font-style: normal;
   font-weight: 400;
 }
+
+/* PT Sans - Regular 400 */
+
+@font-face {
+  font-family: 'PT Sans';
+  src: url(../fonts/PTSans-Regular.ttf) format('ttf');
+  font-style: normal;
+  font-weight: 400;
+}
