--- a/src/components/Footer/Footer.scss
+++ b/src/components/Footer/Footer.scss
@@ -1,10 +1,13 @@
 footer {
   width: 100%;
   align-content: center;
-  background-color: rgb(197, 186, 186);
+  background-color: $background-color-2;
   padding: 0 15px;
+  display: flex;
+
 }
 
 p {
-  margin: 0 auto;
+  align-content: center;
+  padding: 16px 0;
 }
