--- a/src/components/Main/Section_Register/Register.scss
+++ b/src/components/Main/Section_Register/Register.scss
@@ -19,26 +19,129 @@
     }
   }
 
+  &__form {
+    padding: 18.5px 16px 160px 16px;
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    border-radius: 2%;
+    font-family: 'PT Sans';
 
+  }
+
+  //form-main
 
   &__form-main {
     outline: 1px solid red;
     width: 50%;
+    padding-bottom: 23px;
 
     input,
     label {
       display: block;
+      font-size: 16px;
     }
+
+    input:focus+.Register-section__after-input {
+      display: block;
+    }
+
+
 
   }
 
+  &__form-main-element {
+    padding-bottom: 15px;
+  }
+
   &__form-main-label {
-    padding-bottom: 10px;
+    padding-bottom: 11px;
   }
 
   &__form-main-input {
     width: 100%;
     height: 38px;
-    margin-bottom: 20px;
+    margin-bottom: 5px;
+    padding: 10px;
   }
+
+  &__after-input {
+    font-size: 13px;
+    display: none;
+  }
+
+  //form select
+  &__select {
+    width: 50%;
+    outline: 1px solid green;
+    padding-bottom: 10px;
+  }
+
+  &__select-header {
+    display: block;
+    padding-bottom: 20px;
+  }
+
+  &__select-position {
+    padding-bottom: 10px;
+  }
+
+  input[type=radio] {
+    transform: scale(1.3);
+    margin-left: 1px;
+    margin-right: 10px;
+  }
+
+  &__photo-container {
+    outline: 1px solid orange;
+    width: 50%;
+    display: flex;
+    flex-wrap: wrap;
+    margin-bottom: 37px;
+  }
+
+  &__photo-label,
+  &__poho-input {
+    width: 100%;
+  }
+
+  &__photo-label {
+    padding-bottom: 10px;
+  }
+
+  input[type=file] {
+    display: none;
+  }
+
+  &__photo-input {
+    display: flex;
+    width: 100%;
+  }
+
+}
+
+.custom-file-upload,
+.custom-file-browse {
+  border: 1px solid #d4d9de;
+  display: block;
+  padding: 8px 12px;
+  margin: 0;
+  cursor: pointer;
+}
+
+.custom-file-upload {
+  width: 83%;
+  border-top-left-radius: 5%;
+  border-bottom-left-radius: 5%;
+}
+
+.custom-file-upload>span {
+  color: #d4d9de;
+}
+
+.custom-file-browse {
+  width: 17%;
+  background-color: #f8f7f5;
+  border-top-right-radius: 5%;
+  border-bottom-right-radius: 5%;
 }
