--- a/src/components/Header/SideDrawer/SideDrawer.scss
+++ b/src/components/Header/SideDrawer/SideDrawer.scss
@@ -9,6 +9,8 @@
   z-index: 200;
   transform: translateX(-100%);
   transition: transform 0.3s ease-out;
+  position: fixed;
+  overflow-y: auto;
 
   :first-child>ul {
     padding: 0;
@@ -33,7 +35,7 @@
   }
 
 
-  a {
+  span {
     color: $text-color;
     text-decoration: none;
     font-size: $baseFontSize;
