--- a/src/components/Main/Section_About_Me/AboutMe.scss
+++ b/src/components/Main/Section_About_Me/AboutMe.scss
@@ -22,11 +22,35 @@
 
     h1 {
       text-align: left;
+
+      @media (max-width: 767px) {
+        text-align: center;
+      }
     }
 
     p {
       padding-top: 5px;
       padding-bottom: 12px;
+    }
+
+    @media (max-width: 1023px) {
+
+      height: 80%;
+      max-width: 460px;
+
+      p {
+        padding-top: 7px;
+        padding-bottom: 15px;
+      }
+    }
+
+    @media (max-width: 767px) {
+
+      height: 100%;
+      margin: 0 auto;
+      padding: 0 20px 0 20px;
+
+
     }
 
   }
@@ -40,7 +64,16 @@
     display: none;
   }
 
-  @media (max-width: 728px) {
+  @media (max-width: 1023px) {
+    background-position: top left;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 600px;
+
+
+  }
+
+  @media (max-width: 767px) {
     background-position: center;
     height: 400px;
 
