--- a/src/components/Main/Section_Relationships_and_Requirements/Relationship.scss
+++ b/src/components/Main/Section_Relationships_and_Requirements/Relationship.scss
@@ -1,6 +1,5 @@
 .Relationship {
   max-width: 1024px;
-  outline: 1px solid red;
   height: 800px;
   background-color: $background-color;
 
@@ -10,7 +9,6 @@
     height: 100%;
     width: 100%;
     padding: 152px 30px;
-    outline: 1px solid blue;
     display: flex;
     flex-wrap: wrap;
 
@@ -18,7 +16,6 @@
   }
 
   &__inner-container {
-    outline: 1px solid yellowgreen;
     width: 100%;
     height: 100%;
     display: flex;
@@ -26,8 +23,8 @@
     align-items: center;
 
     @media (max-width:767px) {
-      flex-direction: column;
-      margin-top: 25px;
+      flex-direction: row;
+      flex-wrap: wrap;
     }
   }
 
@@ -37,7 +34,6 @@
   }
 
   &__text-container {
-    outline: 1px solid green;
     height: 72%;
     width: 56.5%;
     display: flex;
@@ -48,18 +44,17 @@
     padding-bottom: 55px;
     text-align: justify;
 
-    @media (max-width:767px) {
-      width: 100%;
-      height: 100%;
-      padding-bottom: 0;
-      padding-top: 25px;
-      ;
 
+    @media (max-width:1023px) {
+
+      width: 61%
     }
 
-    @media (min-width:768px) {
-
-
+    @media (max-width:767px) {
+      width: 100%;
+      height: 66%;
+      padding-bottom: 0;
+      padding-top: 25px;
       ;
 
     }
@@ -67,7 +62,10 @@
     h2 {
       margin-left: 0;
       line-height: 19px;
-      ;
+
+      @media (max-width:767px) {
+        font-size: 22px;
+      }
     }
 
     button {
@@ -100,26 +98,25 @@
   }
 
   &__svg {
-    outline: 1px solid red;
     width: 39.5%;
     height: 58.5%;
     margin-bottom: 65px;
-    ;
+
+
+    @media (max-width: 1024px) {
+      width: 35.5%;
+      height: 57.5%;
+      margin-bottom: 145px;
+    }
 
     @media (max-width:767px) {
       width: 100%;
+      height: 40.5%;
+      margin-bottom: 0;
+      margin-top: 10px;
 
     }
 
-    // @media (min-width: 768px) {
-    //   width: 305px;
-    //   height: 225px;
-    // }
-
-    // @media (min-width: 968px) {
-    //   width: 385px;
-    //   height: 285px;
-    // }
   }
 
 
