--- a/src/sass/styles.scss
+++ b/src/sass/styles.scss
@@ -7,7 +7,7 @@
 @import '../components/Header/SideDrawer/DrawerToggleButton.scss';
 @import '../components/Header/SideDrawer/SideDrawer.scss';
 // @import '../components/Main/Section_About_Me/AboutMe.scss';
-@import '../components/shared/Button.scss';
+@import './Button.scss';
 @import '../components/Main/Section_Relationships_and_Requirements/Relationship.scss';
 @import '../components/Main/Section_Users/Users.scss';
 @import '../components/shared/Modal.scss';
